[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/progress_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/question_container.gd" type="Script" id=2]
[ext_resource path="res://resources/question_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/answers_container.gd" type="Script" id=4]
[ext_resource path="res://scenes/answer.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/PTSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/next_button.gd" type="Script" id=7]
[ext_resource path="res://resources/timer_watch_icon.png" type="Texture" id=8]
[ext_resource path="res://scripts/timer_controller.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.298039, 0.686275, 0.313726, 1 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.298039, 0.686275, 0.313726, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 6 )

[node name="QuizScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.95, 0.95, 0.95, 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Header" type="VBoxContainer" parent="MainContainer"]
margin_right = 589.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
alignment = 1

[node name="TopBar" type="HBoxContainer" parent="MainContainer/Header"]
visible = false
margin_right = 589.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="LogoContainer" type="HBoxContainer" parent="MainContainer/Header/TopBar"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 0 )

[node name="LogoIcon" type="ColorRect" parent="MainContainer/Header/TopBar/LogoContainer"]
margin_right = 40.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 40 )
color = Color( 0.298039, 0.686275, 0.313726, 1 )

[node name="LogoText" type="Label" parent="MainContainer/Header/TopBar/LogoContainer"]
margin_left = 44.0
margin_top = 23.0
margin_right = 44.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.298039, 0.686275, 0.313726, 1 )
text = "–ú–ï–ì–ê–§–û–ù"

[node name="Spacer" type="Control" parent="MainContainer/Header/TopBar"]
margin_left = 204.0
margin_right = 529.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="MenuButton" type="Button" parent="MainContainer/Header/TopBar"]
margin_left = 533.0
margin_right = 589.0
margin_bottom = 60.0
rect_min_size = Vector2( 56, 56 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 1 )
text = "‚ò∞"

[node name="TitleRow" type="HBoxContainer" parent="MainContainer/Header"]
margin_top = 20.0
margin_right = 589.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )

[node name="QuestionsTitle" type="Label" parent="MainContainer/Header/TitleRow"]
margin_top = 1.0
margin_right = 120.0
margin_bottom = 38.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 4 )
text = "–í–æ–ø—Ä–æ—Å—ã"

[node name="Spacer2" type="Control" parent="MainContainer/Header/TitleRow"]
margin_left = 124.0
margin_right = 459.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="TimerContainer" type="HBoxContainer" parent="MainContainer/Header/TitleRow"]
margin_left = 463.0
margin_right = 589.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="TimerIcon" type="TextureRect" parent="MainContainer/Header/TitleRow/TimerContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
rect_pivot_offset = Vector2( -1105, 411 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="TimerLabel" type="Label" parent="MainContainer/Header/TitleRow/TimerContainer"]
margin_left = 44.0
margin_top = 4.0
margin_right = 126.0
margin_bottom = 36.0
rect_min_size = Vector2( 82, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "00:01"
valign = 1

[node name="Spacer" type="Control" parent="MainContainer/Header"]
margin_top = 64.0
margin_right = 589.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="ProgressContainer" type="VBoxContainer" parent="MainContainer/Header"]
margin_top = 88.0
margin_right = 589.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 32 )
alignment = 1

[node name="ProgressBar" parent="MainContainer/Header/ProgressContainer" instance=ExtResource( 1 )]
margin_top = 8.0
margin_right = 589.0
margin_bottom = 23.0

[node name="HintsContainer" type="HBoxContainer" parent="MainContainer/Header/ProgressContainer"]
visible = false
margin_top = 16.0
margin_right = 589.0
margin_bottom = 66.0
alignment = 1

[node name="ShieldHint" type="Button" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 152.0
margin_right = 202.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_colors/font_color = Color( 0.298039, 0.686275, 0.313726, 1 )
custom_styles/normal = SubResource( 2 )
text = "üõ°"

[node name="Spacer1" type="Control" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 206.0
margin_right = 226.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 0 )

[node name="RefreshHint" type="Button" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 230.0
margin_right = 280.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_colors/font_color = Color( 0.298039, 0.686275, 0.313726, 1 )
custom_styles/normal = SubResource( 2 )
text = "üîÑ"

[node name="Spacer2" type="Control" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 284.0
margin_right = 304.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 0 )

[node name="ClockHint" type="Button" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 308.0
margin_right = 358.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_colors/font_color = Color( 0.298039, 0.686275, 0.313726, 1 )
custom_styles/normal = SubResource( 2 )
text = "‚è∞"

[node name="Spacer3" type="Control" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 362.0
margin_right = 382.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 0 )

[node name="FiftyFiftyHint" type="Button" parent="MainContainer/Header/ProgressContainer/HintsContainer"]
margin_left = 386.0
margin_right = 436.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_colors/font_color = Color( 0.298039, 0.686275, 0.313726, 1 )
custom_styles/normal = SubResource( 2 )
text = "50/50"

[node name="ContentContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 144.0
margin_right = 589.0
margin_bottom = 904.0
size_flags_vertical = 3

[node name="QuestionContainer" type="VBoxContainer" parent="MainContainer/ContentContainer"]
margin_right = 589.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
script = ExtResource( 2 )

[node name="QuestionText" type="Label" parent="MainContainer/ContentContainer/QuestionContainer"]
margin_right = 589.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 3 )
text = "–ê–∫—Ç—ë—Ä –∫–∏–Ω–æ –∏ –¥—É–±–ª—è–∂–∞, —ç—Å—Ç—Ä–∞–¥–Ω—ã–π –ø–µ–≤–µ—Ü, –æ–¥–∏–Ω –∏–∑ –Ω–∞–∏–±–æ–ª–µ–µ –ª—é–±–∏–º—ã—Ö –∞—Ä—Ç–∏—Å—Ç–æ–≤ —Å–æ–≤–µ—Ç—Å–∫–æ–π —ç—Å—Ç—Ä–∞–¥—ã 1950‚Äî1960-—Ö –≥–æ–¥–æ–≤"
align = 1
valign = 1
autowrap = true

[node name="AnswersContainer" type="VBoxContainer" parent="MainContainer/ContentContainer"]
margin_top = 124.0
margin_right = 589.0
margin_bottom = 547.0
rect_min_size = Vector2( 0, 312 )
custom_constants/separation = 21
script = ExtResource( 4 )

[node name="Answer1" parent="MainContainer/ContentContainer/AnswersContainer" instance=ExtResource( 5 )]
margin_bottom = 90.0
rect_scale = Vector2( 1, 1 )
focus_mode = 0
answer = "A"

[node name="Answer2" parent="MainContainer/ContentContainer/AnswersContainer" instance=ExtResource( 5 )]
margin_top = 111.0
margin_bottom = 201.0
rect_scale = Vector2( 1, 1 )
answer = "B"

[node name="Answer3" parent="MainContainer/ContentContainer/AnswersContainer" instance=ExtResource( 5 )]
margin_top = 222.0
margin_bottom = 312.0
rect_scale = Vector2( 1, 1 )
answer = "C"

[node name="Answer4" parent="MainContainer/ContentContainer/AnswersContainer" instance=ExtResource( 5 )]
margin_top = 333.0
margin_bottom = 423.0
rect_scale = Vector2( 1, 1 )
answer = "D"

[node name="BottomContainer" type="CenterContainer" parent="MainContainer"]
margin_top = 908.0
margin_right = 589.0
margin_bottom = 984.0
rect_min_size = Vector2( 0, 76 )

[node name="NextButton" type="Button" parent="MainContainer/BottomContainer"]
margin_left = 119.0
margin_right = 469.0
margin_bottom = 76.0
rect_min_size = Vector2( 350, 76 )
rect_pivot_offset = Vector2( 175, 38 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "–î–∞–ª–µ–µ"
script = ExtResource( 7 )
